Using bower dependencies

--- a/search.html
+++ b/search.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hello Search!</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link href="src/search.css" rel="stylesheet">
   </head>
   <body>
@@ -74,9 +74,9 @@
       </div>
     </div>
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="build/react.js"></script>
-    <script src="build/JSXTransformer.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/bootstrap//dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/react/react.min.js"></script>
+    <script src="bower_components/react/JSXTransformer.js"></script>
   </body>
 </html>
