--- a/search.html
+++ b/search.html
@@ -78,5 +78,7 @@
     <script src="bower_components/bootstrap//dist/js/bootstrap.min.js"></script>
     <script src="bower_components/react/react.min.js"></script>
     <script src="bower_components/react/JSXTransformer.js"></script>
+    <script src="bower_components/elasticsearch/elasticsearch.jquery.min.js"></script>
+    <script src="src/search.js"></script>
   </body>
 </html>
