Initial react setup

--- a/search.html
+++ b/search.html
@@ -42,18 +42,6 @@
             <li><a href="#">Analytics</a></li>
             <li><a href="#">Export</a></li>
           </ul>
-          <ul class="nav nav-sidebar">
-            <li><a href="">Nav item</a></li>
-            <li><a href="">Nav item again</a></li>
-            <li><a href="">One more nav</a></li>
-            <li><a href="">Another nav item</a></li>
-            <li><a href="">More navigation</a></li>
-          </ul>
-          <ul class="nav nav-sidebar">
-            <li><a href="">Nav item again</a></li>
-            <li><a href="">One more nav</a></li>
-            <li><a href="">Another nav item</a></li>
-          </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           
@@ -64,12 +52,7 @@
             <li><a href="#">Sales</a></li>
           </ul>
           
-          <div class="row">
-            <p>Search result 1
-          </div>
-          <div class="row">
-            <p>Search result 2
-          </div>
+          <div id="search"></div>
         </div>
       </div>
     </div>
@@ -79,6 +62,6 @@
     <script src="bower_components/react/react.min.js"></script>
     <script src="bower_components/react/JSXTransformer.js"></script>
     <script src="bower_components/elasticsearch/elasticsearch.jquery.min.js"></script>
-    <script src="src/search.js"></script>
+    <script type="text/jsx" src="src/search.jsx"></script>
   </body>
 </html>
