Stubbed out search form

--- a/search.html
+++ b/search.html
@@ -27,9 +27,7 @@
             <li><a href="#">Profile</a></li>
             <li><a href="#">Help</a></li>
           </ul>
-          <form class="navbar-form navbar-left">
-            <input type="text" class="form-control" placeholder="Search...">
-          </form>
+          <div id="search-form"/>
         </div>
       </div>
     </nav>
